tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_mixed_approved_unapproved_decline.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
n
[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m2[22m commands:[39m

[2m○[22m post-create [1mfirst[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'First command'[0m[2m[0m
[2m○[22m post-create [1mthird[22m:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'Third command'[0m[2m[0m
[36m❯[39m Allow and remember? [1m[y/N][22m 

[2m○[22m Commands declined, continuing worktree creation
[32m✓[39m [32mCreated new worktree for [1mtest-mixed-decline[22m from [1mmain[22m @ [1m_REPO_/repo.test-mixed-decline[22m[39m
[2m↳[22m [2mRun [90mwt config shell install[39m to enable automatic cd[22m
