tests/integration_tests/snapshots/integration__integration_tests__approval_pty__approval_prompt_permission_error.snap
---
source: tests/integration_tests/approval_pty.rs
expression: normalized
---
y

[33m▲[39m [33m[1mrepo[22m needs approval to execute [1m1[22m command:[39m

[2m○[22m post-create:
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m[2m[0m
[36m❯[39m Allow and remember? [1m[y/N][22m 
[33m▲[39m [33mFailed to save command approval: Failed to write config file: Permission denied (os error 13)[39m
[2m↳[22m [2mApproval will be requested again next time.[22m
[36m◎[39m [36mRunning post-create [1mproject hook[22m:[39m
[107m [0m [2m[0m[2m[34mecho[0m[2m [0m[2m[32m'test command'[0m[2m[0m
[0mtest command
[32m✓[39m [32mCreated new worktree for [1mtest-permission[22m from [1mmain[22m @ [1m_REPO_/repo.test-permission[22m[39m
[2m↳[22m [2mRun [90mwt config shell install[39m to enable automatic cd[22m
